# codetriever

./: .env.sample  .gitignore  .gitmessage  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LIMITATIONS.md  MCP_SETUP.md  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.qdrant.yml  docker-compose.yml  justfile  release.toml  requirements.txt  rust-toolchain.toml  stack.env
.cargo/: audit.toml  config.toml
.github/: release-drafter.yml
api/: codetriever-openapi.yaml
crates/codetriever/: Cargo.toml
crates/codetriever-api/: Cargo.toml
crates/codetriever-api/src/: bootstrap.rs  error.rs  lib.rs  main.rs  middleware.rs  openapi.rs  state.rs  test_utils.rs
crates/codetriever-api/src/config/: api.rs  mod.rs
crates/codetriever-api/src/embedding/: jina_bert_v2.rs  mod.rs  model.rs
crates/codetriever-api/src/indexing/: indexer.rs  mod.rs  service.rs
crates/codetriever-api/src/parser/: code_parser.rs  mod.rs
crates/codetriever-api/src/routes/: health.rs  index.rs  mod.rs  response.rs  search.rs  status.rs
crates/codetriever-api/src/storage/: mod.rs  qdrant.rs
crates/codetriever-api/tests/: edge_case_coverage.rs  embeddings_tests.rs  indexer_qdrant_integration.rs  load_testing.rs  manual_search_test.rs  openapi_validation.rs  performance_regression.rs  qdrant_tests.rs  status_integration_test.rs  test_data_constants.rs  test_embeddings.rs  test_python_rust_comparison.rs  test_utils.rs
crates/codetriever-common/: Cargo.toml
crates/codetriever-common/src/: error.rs  error_sanitizer.rs  init.rs  lib.rs  tracing.rs
crates/codetriever-config/: Cargo.toml
crates/codetriever-config/src/: error.rs  lib.rs  profile.rs  source.rs  validation.rs
crates/codetriever-data/: Cargo.toml
crates/codetriever-data/examples/: run_migrations.rs
crates/codetriever-data/migrations/: 001_initial_schema.sql  003_functions.sql
crates/codetriever-data/src/: chunk_id.rs  client.rs  config.rs  error.rs  git.rs  lib.rs  migrations.rs  mock.rs  models.rs  pool.rs  pool_builder.rs  pool_manager.rs  repository.rs  traits.rs
crates/codetriever-embeddings/: Cargo.toml
crates/codetriever-embeddings/src/: error.rs  lib.rs
crates/codetriever-embeddings/src/embedding/: dispatcher.rs  mod.rs  model.rs  pool.rs  service.rs  traits.rs
crates/codetriever-indexer/: Cargo.toml
crates/codetriever-indexer/examples/: show_data.rs
crates/codetriever-indexer/src/: error.rs  lib.rs
crates/codetriever-indexer/src/chunking/: jina_counter.rs  service.rs
crates/codetriever-indexer/src/config/: api.rs  builder.rs  mod.rs
crates/codetriever-indexer/src/embedding/: jina_bert_v2.rs  mod.rs  model.rs  service.rs  traits.rs
crates/codetriever-indexer/src/indexing/: indexer.rs  mod.rs  service.rs  streaming.rs  watcher.rs
crates/codetriever-indexer/src/parsing/: code_parser.rs  languages.rs  mod.rs  traits.rs
crates/codetriever-indexer/src/search/: mod.rs  service.rs  test_utils.rs
crates/codetriever-indexer/src/storage/: mock.rs  mod.rs  qdrant.rs  traits.rs
crates/codetriever-indexer/tests/: byte_offset_test.rs  chunking_tests.rs  content_indexing_tests.rs  embeddings_tests.rs  full_stack_integration.rs  indexer_qdrant_integration.rs  manual_search_test.rs  qdrant_embedding_test.rs  qdrant_integration.rs  qdrant_tests.rs  test_utils.rs  token_counter_tests.rs
crates/codetriever-indexing/: Cargo.toml
crates/codetriever-indexing/examples/: show_data.rs
crates/codetriever-indexing/src/: error.rs  factory.rs  lib.rs  queues.rs  worker.rs
crates/codetriever-indexing/src/config/: api.rs  builder.rs  mod.rs
crates/codetriever-indexing/src/indexing/: indexer.rs  mod.rs  service.rs  watcher.rs
crates/codetriever-indexing/src/queues/: in_memory_queue.rs  mod.rs  postgres_queue.rs
crates/codetriever-indexing/src/security/: mod.rs  path_validator.rs
crates/codetriever-indexing/tests/: byte_offset_test.rs  chunking_tests.rs  content_indexing_tests.rs  embeddings_tests.rs  full_stack_integration.rs  index_rust_mini_redis_test.rs  manual_search_test.rs  postgres_queue_test.rs  qdrant_embedding_test.rs  qdrant_filter_tests.rs  qdrant_integration.rs  qdrant_tests.rs  test_utils.rs  token_counter_tests.rs  unchanged_files_completion_test.rs
crates/codetriever-meta-data/: Cargo.toml
crates/codetriever-meta-data/examples/: run_migrations.rs
crates/codetriever-meta-data/migrations/: 001_initial_schema.sql  002_indexes.sql  003_functions.sql  004_performance_indexes.sql
crates/codetriever-meta-data/src/: chunk_id.rs  chunk_queue.rs  client.rs  error.rs  git.rs  lib.rs  migrations.rs  mock.rs  models.rs  pool.rs  pool_builder.rs  pool_manager.rs  repository.rs  traits.rs
crates/codetriever-meta-data/tests/common/: mocks.rs  mod.rs
crates/codetriever-parsing/: Cargo.toml
crates/codetriever-parsing/src/: error.rs  lib.rs
crates/codetriever-parsing/src/chunking/: heuristic_counter.rs  jina_counter.rs  mod.rs  registry.rs  service.rs  tiktoken_counter.rs  traits.rs
crates/codetriever-parsing/src/parsing/: code_parser.rs  languages.rs  mod.rs  traits.rs
crates/codetriever-search/: Cargo.toml
crates/codetriever-search/src/: error.rs  lib.rs
crates/codetriever-search/src/search/: mod.rs  service.rs  test_utils.rs
crates/codetriever-search/src/searching/: mod.rs  search.rs  service.rs  test_utils.rs
crates/codetriever-test-utils/: Cargo.toml
crates/codetriever-test-utils/src/: lib.rs
crates/codetriever-vector-data/: Cargo.toml
crates/codetriever-vector-data/src/: error.rs  lib.rs
crates/codetriever-vector-data/src/storage/: mock.rs  mod.rs  qdrant.rs  traits.rs
crates/codetriever/schemas/: clean.json  compact.json  find_similar.json  find_usages.json  get_context.json  get_stats.json  get_status.json  index.json  search.json
crates/codetriever/src/: common.rs  config.rs  main.rs  server.rs  signal.rs  transport.rs
crates/codetriever/src/handlers/: clean.rs  compact.rs  find_similar.rs  find_usages.rs  get_context.rs  get_stats.rs  get_status.rs  index.rs  mod.rs  search.rs
docker/: .dockerignore  Makefile  (+7 more)
(+82 files in other folders)
