[workspace]
members = [
    "crates/codetriever",
    "crates/codetriever-api",
    "crates/codetriever-common",
    "crates/codetriever-data",
    "crates/codetriever-indexer",
    # Future crates:
    # "crates/codetriever-core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["LaFollett Labs LLC"]
repository = "https://github.com/clafollett/codetriever"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3.31"

# Web framework
axum = { version = "0.8.3", features = ["json", "macros", "ws", "multipart"] }
tower = { version = "0.5.2", features = ["util"] }
reqwest = { version = "0.12.19", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }

# Date/Time
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
schemars = "0.8.22"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
regex = "1.11.1"
urlencoding = "2.1.3"
dirs = "6"
tempfile = "3"

# MCP/Agenterra
agenterra-rmcp = { version = "0.1.5", features = [
    "macros",
    "server",
    "transport-sse-server",
    "transport-io",
    "auth",
] }

# API Documentation
utoipa = "5.3.1"
utoipa-swagger-ui = "9.0.1"

# Signal handling
signal-hook = "*"
signal-hook-tokio = "0.3.1"

# Template engine
tera = "1.17"

[workspace.lints.clippy]
uninlined_format_args = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
