[package]
name = "codetriever-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "codetriever-api"
path = "src/main.rs"

[dependencies]
# Local crates
codetriever-common = { path = "../codetriever-common" }
codetriever-indexer = { path = "../codetriever-indexer" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = "0.1.89"

# Web framework
axum = { workspace = true }
tower = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
lazy_static = "1.5.0"
bytes = "1"
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
codetriever-indexer = { path = "../codetriever-indexer", features = ["test-utils"] }

[lints]
workspace = true
