[package]
name = "codetriever-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "codetriever-api"
path = "src/main.rs"

[dependencies]
# Local crates
codetriever-common = { path = "../codetriever-common" }
codetriever-indexer = { path = "../codetriever-indexer" }
codetriever-data = { path = "../codetriever-data" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = "0.1.89"

# Web framework
axum = { workspace = true }
tower = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and Observability
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
tracing-opentelemetry = "0.31.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

# Utils
lazy_static = "1.5.0"
bytes = "1"
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }

# Cryptography
sha2 = "0.10"

# Text processing
regex = "1.11"

# OpenAPI/Swagger
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tower = { workspace = true }
codetriever-indexer = { path = "../codetriever-indexer", features = [
    "test-utils",
] }

[lints]
workspace = true
