[package]
name = "codetriever-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "codetriever-api"
path = "src/main.rs"

[dependencies]
# Local crates
codetriever-common = { path = "../codetriever-common" }
codetriever-config = { path = "../codetriever-config" }
codetriever-embeddings = { path = "../codetriever-embeddings" }
codetriever-indexing = { path = "../codetriever-indexing" }
codetriever-search = { path = "../codetriever-search" }
codetriever-meta-data = { path = "../codetriever-meta-data" }
codetriever-vector-data = { path = "../codetriever-vector-data" }
codetriever-parsing = { path = "../codetriever-parsing" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and Observability
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Utils
lazy_static = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }

# Cryptography
sha2 = { workspace = true }

# Text processing
regex = { workspace = true }

# OpenAPI/Swagger
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tower = { workspace = true }
codetriever-indexing = { path = "../codetriever-indexing", features = [
    "test-utils",
] }
codetriever-search = { path = "../codetriever-search", features = [
    "test-utils",
] }

[lints]
workspace = true
