[package]
name = "codetriever-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true, optional = true }

[lints]
workspace = true
