[package]
name = "codetriever-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
