[package]
name = "codetriever-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Utilities
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# Logging
tracing = { workspace = true }

# Database (for PostgreSQL-specific functionality)
sqlx = { workspace = true }

# Internal dependencies
codetriever-common = { path = "../codetriever-common" }

[features]
default = []
hot-reload = []

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
