[package]
name = "codetriever-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# ML/AI dependencies - CPU by default
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Internal dependencies
codetriever-common = { path = "../codetriever-common" }
codetriever-config = { path = "../codetriever-config" }

[features]
# No default features - must explicitly enable GPU
default = []
test-utils = []

# GPU acceleration features
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dev-dependencies]
tokio-test = { workspace = true }