[package]
name = "codetriever-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
test-utils = []

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
async-trait = "0.1.89"
lazy_static = "1.5.0"
chrono = { workspace = true }
uuid = { workspace = true }

# Text processing
regex = { workspace = true }
tiktoken-rs = "0.6.0"
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.1"
tree-sitter-bash = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-powershell = "0.25.8"
tree-sitter-sequel = "0.3.8"
blake3 = "1.5.5"

# Vector storage
qdrant-client = { version = "1.15.0" }

# Embeddings
ollama-rs = { version = "0.3", features = ["tokio", "stream"] }
fastembed = { version = "4", default-features = false, features = [
    "ort-download-binaries",
] }
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokenizers = { version = "0.22.0", default-features = false, features = [
    "onig",
] }

# Database
codetriever-data = { path = "../codetriever-data" }

# Utils
walkdir = "2.5"
ignore = "0.4"
rayon = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }

[dev-dependencies]
once_cell = "1.20"
tempfile = { workspace = true }
sqlx = { workspace = true }
