[package]
name = "codetriever-indexing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
test-utils = []

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
codetriever-common = { path = "../codetriever-common" }
codetriever-config = { path = "../codetriever-config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }

# Resilience patterns - using simple retry logic
# Performance caching
lru = { workspace = true }

# Observability
metrics = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }

# Text processing (minimal - parsing now handled by separate crate)
regex = { workspace = true }
encoding_rs = "0.8"  # Auto-detect and convert file encodings (UTF-16, Windows-1252, etc.)

# Note: Vector storage and embeddings now handled by separate crates

# Separated crates - now dependencies
codetriever-embeddings = { path = "../codetriever-embeddings" }
codetriever-vector-data = { path = "../codetriever-vector-data" }
codetriever-meta-data = { path = "../codetriever-meta-data" }
codetriever-parsing = { path = "../codetriever-parsing" }
codetriever-search = { path = "../codetriever-search" }

# Utils
walkdir = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }

# Target-specific dependencies now handled by embeddings crate

[dev-dependencies]
codetriever-test-utils = { path = "../codetriever-test-utils" }
once_cell = { workspace = true }
tempfile = { workspace = true }
sqlx = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }
tracing-subscriber = { workspace = true }
