[package]
name = "codetriever-meta-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Git integration
git2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Crypto
sha2 = { workspace = true }

# Utils
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
tracing = { workspace = true }
utoipa = { version = "5.4.0", optional = true }

# Internal dependencies
codetriever-config = { path = "../codetriever-config" }

[features]
default = []
utoipa = ["dep:utoipa"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[lints]
workspace = true
