[package]
name = "codetriever-parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Parsing and chunking
tokenizers = { workspace = true }
tiktoken-rs = { workspace = true }

# Language support
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-xml = { workspace = true }
tree-sitter-yaml = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-powershell = { workspace = true }
tree-sitter-sequel = { workspace = true }

# Utilities
once_cell = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }

# Internal dependencies
codetriever-common = { path = "../codetriever-common" }

[features]
default = []
test-utils = []

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true }
