[package]
name = "codetriever-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
lru = { workspace = true }

# Internal dependencies
codetriever-common = { path = "../codetriever-common" }
codetriever-embeddings = { path = "../codetriever-embeddings" }
codetriever-vector-data = { path = "../codetriever-vector-data" }
codetriever-meta-data = { path = "../codetriever-meta-data" }
codetriever-parsing = { path = "../codetriever-parsing" }

# Observability
metrics = { workspace = true }

[features]
default = []
test-utils = []

[dev-dependencies]
tokio-test = { workspace = true }