[package]
name = "codetriever-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
codetriever-common = { path = "../codetriever-common" }
codetriever-config = { path = "../codetriever-config" }
codetriever-embeddings = { path = "../codetriever-embeddings" }

[lints]
workspace = true
