[package]
name = "codetriever-vector-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Vector database
qdrant-client = { workspace = true }
uuid = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# Internal dependencies
codetriever-common = { path = "../codetriever-common" }
codetriever-config = { path = "../codetriever-config" }
codetriever-parsing = { path = "../codetriever-parsing" }
codetriever-meta-data = { path = "../codetriever-meta-data" }

[features]
default = []
test-utils = []

[dev-dependencies]
tokio-test = { workspace = true }
