[package]
name = "codetriever"
default-run = "codetriever"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "codetriever"
path = "src/main.rs"

[dependencies]
# Local crates
codetriever-common = { path = "../codetriever-common" }

# From workspace
agenterra-rmcp = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
dotenv = { workspace = true }


[dev-dependencies]
wiremock = "0.6"
